feat: Se agrego el primer articulo más el enlace a las redes sociales en el panelside

--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -36,6 +36,8 @@ const { Content } = await entry.render();
     margin: 100px auto;
     padding: 0 1rem;
     font-family: "Archivo Narrow", serif;
+    padding-bottom: 50px;
+    font-size: 1.15rem;
   }
 
   article h1 {
@@ -46,12 +48,10 @@ const { Content } = await entry.render();
   article p {
     line-height: 1.6;
     margin-bottom: 1rem;
-    font-size: 1.1rem;
   }
 
   article img {
     max-width: 100%;
-    height: auto;
     margin: 1rem 0;
     border-radius: 8px;
   }
