--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -1,16 +1,21 @@
 ---
 import { getCollection } from 'astro:content';
-const posts = await getCollection('posts');
+const posts = (await getCollection('posts')).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
 ---
 <div class="blog-posts">
   {posts.map((post) => (
     <article>
       <img src={post.data.image} alt={post.data.title} />
+      <a href={`/post/${post.slug}`}>{post.data.title}</a>
       <div class="tags-date">
         <span class="tag-post">{post.data.tag}</span>
-        <span>{new Date(post.data.pubDate).toLocaleDateString('es-ES', { year: 'numeric', month: 'short', day: 'numeric' })}</span>
+        <div class="date-post">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><g fill="none"><rect width="18" height="15" x="3" y="6" stroke="currentColor" stroke-width="2" rx="2"/><path fill="currentColor" d="M3 10c0-1.886 0-2.828.586-3.414S5.114 6 7 6h10c1.886 0 2.828 0 3.414.586S21 8.114 21 10z"/><path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M7 3v3m10-3v3"/></g></svg>
+            <span>{new Date(post.data.pubDate).toLocaleDateString('es-MX', { year: 'numeric', month: 'short', day: 'numeric' })}</span>
+        </div>
       </div>
-      <a href={`/post/${post.slug}`}>{post.data.title}</a>
       <p>{post.data.description}</p>
     </article>
   ))}
@@ -18,9 +23,8 @@ const posts = await getCollection('posts');
 
 <style>
     .blog-posts{
-        list-style: none;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .blog-posts .tags-date{
@@ -34,20 +38,31 @@ const posts = await getCollection('posts');
         & .tag-post{
             background-color: black;
             color: white;
-            padding: 0 10px;
+            padding: 5px 10px;
             display: inline-block;
+            margin-right: 20px;
+        }
+        & .date-post{
+            display: flex;
+            align-items: center;
+            background-color: rgb(44, 146, 172);
+            padding: 0 10px;
+            color: white;
+            & span{
+                padding-left: 5px;
+            }
         }
     }
 
     .blog-posts article{
-        width: 360px;
+        width: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
     .blog-posts article img{
-        width: 360px;
+        width: 300px;
         height: 250px;
         object-fit: cover;
         border-radius: 8px;
