--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,13 +1,14 @@
 
 <nav>
 	<a href="/" class="home-redirect">stevenlayna</a>
-	<div>
-		<a href="">Sobre mi</a>
-	</div>
+	<div class="search-bar">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="#000000" fill-rule="evenodd" d="M18.319 14.433A8.001 8.001 0 0 0 6.343 3.868a8 8 0 0 0 10.564 11.976l.043.045l4.242 4.243a1 1 0 1 0 1.415-1.415l-4.243-4.242zm-2.076-9.15a6 6 0 1 1-8.485 8.485a6 6 0 0 1 8.485-8.485" clip-rule="evenodd"/></svg>
+        <input type="text" class="search-bar" placeholder="Buscar" />
+    </div>
 </nav>
 
 <style>
-    	nav{
+    nav{
 		width: 100%;
 		height: 60px;
 		background-color: #fff;
@@ -33,4 +34,28 @@
 			padding-right: 50px;
 		}
 	}
+
+    nav .search-bar {
+        width: 100%;
+        height: 28px;
+        display: flex;
+        align-items: center;
+        border: 1px solid black;
+        width: 300px;
+        margin-right: 10px;
+        padding-left: 5px;
+        border-radius: 5px;
+    }
+    nav .search-bar input {
+        width: 100%;
+        height: 26px;
+        border: none;
+        font-size: 1rem;
+        font-family: "Archivo Narrow", sans-serif;
+        color: #000000;
+        outline: none;
+    }
+    nav .search-bar input::placeholder {
+        color: black;
+    }
 </style>
