--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ import Navigation from '../components/Navigation.astro';
 		display: grid;
 		grid-template-columns: 20% 80%;
 		padding-top: 100px;
+		padding-bottom: 50px;
 		font-family: "Archivo Narrow", sans-serif;
 	}
 </style>
