--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
 const posts = (await getCollection('posts')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
@@ -7,7 +8,15 @@ const posts = (await getCollection('posts')).sort(
 <div class="blog-posts">
   {posts.map((post) => (
     <article>
-      <img src={post.data.image} alt={post.data.title} />
+      <div class="content-img">
+         <Image 
+            src={post.data.image} 
+            alt={post.data.title}
+            width={300}
+            height={250}
+            class="post-thumbnail"
+        />
+      </div>
       <a href={`/post/${post.slug}`}>{post.data.title}</a>
       <div class="tags-date">
         <span class="tag-post">{post.data.tag}</span>
@@ -61,12 +70,19 @@ const posts = (await getCollection('posts')).sort(
         align-items: center;
     }
 
+    .blog-posts article .content-img{
+        width: 300px;
+        height: 250px;
+      
+    }
+
     .blog-posts article img{
         width: 300px;
         height: 250px;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 8px;
     }
+
     .blog-posts article a{
         text-decoration: none;
         color: black;
