feat: post busqueda-binaria fue incluido

--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -27,6 +27,12 @@
             <a href="/tag/Algoritmos">Python</a> 
         </div>
     </div>
+    <div class="top-articles">
+        <span>Articulos recomendados.</span>
+        <a href="">Conoce los algoritmos en programación.</a>
+        <a href="">Mi primera publicacion.</a>
+        <a href="">Que es la busqueda binaria.</a>
+    </div>
     <!--<div>
         <p>👋 ¡Bienvenido! Soy Steven. Cree este espacio para compartir lo que he aprendido y continuo aprendiendo sobre temas de desarrollo de software, </p>
     </div>-->
@@ -53,7 +59,7 @@
         }
     }
     aside .tags {
-        margin-top: .5rem;
+        margin-top: 1.2rem;
         font-family: "Archivo Narrow", serif;
         font-size: 1.1rem;
         & span {
@@ -72,6 +78,26 @@
                 padding: 5px 10px;
                 display: inline-block;
             }
+        }
+    }
+
+    aside .top-articles {
+        margin-top: 1.2rem;
+        font-family: "Archivo Narrow", serif;
+        font-size: 1.1rem;
+        & span {
+            display: block;
+            margin-bottom: .5rem;
+        }
+        & a {
+            display: block;
+            text-decoration: none;
+            color: rgb(41, 39, 39);
+            margin-bottom: .2rem;
+            transition: all 0.3s ease;
+            font-size: 1rem;
+            padding-left: .5rem;
+            text-decoration: underline;
         }
     }
 </style>
