--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -5,35 +5,69 @@ const posts = (await getCollection('posts')).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
-<div class="blog-posts">
-  {posts.map((post) => (
-    <article>
-      <div class="content-img">
-         <Image 
-            src={post.data.image} 
-            alt={post.data.title}
-            width={300}
-            height={250}
-            class="post-thumbnail"
-        />
-      </div>
-      <a href={`/post/${post.slug}`}>{post.data.title}</a>
-      <div class="tags-date">
-        <span class="tag-post">{post.data.tag}</span>
-        <div class="date-post">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><g fill="none"><rect width="18" height="15" x="3" y="6" stroke="currentColor" stroke-width="2" rx="2"/><path fill="currentColor" d="M3 10c0-1.886 0-2.828.586-3.414S5.114 6 7 6h10c1.886 0 2.828 0 3.414.586S21 8.114 21 10z"/><path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M7 3v3m10-3v3"/></g></svg>
-            <span>{new Date(post.data.pubDate).toLocaleDateString('es-MX', { year: 'numeric', month: 'short', day: 'numeric' })}</span>
-        </div>
-      </div>
-      <p>{post.data.description}</p>
-    </article>
-  ))}
+<div class="content-blog-posts">
+    <div class="content-blog-header">
+        <h2>¡Bienvenido a mi blog, te saluda Steven Layna!</h2>
+        <span class="header-description">En este blog comparto conocimiento sobre desarrollo web, algoritmos, buenas prácticas de programación y mi recorrido en el mundo tech. Cada artículo tiene como objetivo ayudarte a mejorar tus habilidades, aprender junto conmigo y mostrar mi trayectoria y descubrimientos día a día.</span>
+        <p>¡Espero que lo disfrutes al máximo 🚀 y te sea de gran utilidad 💡!"</p>
+    </div>
+    <div class="blog-posts">
+        {posts.map((post) => (
+            <article>
+                <div class="content-img">
+                    <Image 
+                        src={post.data.image} 
+                        alt={post.data.title}
+                        width={300}
+                        height={250}
+                        class="post-thumbnail"
+                    />
+                </div>
+                <a href={`/post/${post.slug}`}>{post.data.title}</a>
+                <div class="tags-date">
+                    <span class="tag-post">{post.data.tag}</span>
+                    <div class="date-post">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><g fill="none"><rect width="18" height="15" x="3" y="6" stroke="currentColor" stroke-width="2" rx="2"/><path fill="currentColor" d="M3 10c0-1.886 0-2.828.586-3.414S5.114 6 7 6h10c1.886 0 2.828 0 3.414.586S21 8.114 21 10z"/><path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M7 3v3m10-3v3"/></g></svg>
+                        <span>{new Date(post.data.pubDate).toLocaleDateString('es-MX', { year: 'numeric', month: 'short', day: 'numeric' })}</span>
+                    </div>
+                </div>
+                <p>{post.data.description}</p>
+            </article>
+        ))}
+    </div>
 </div>
 
 <style>
+
+    .content-blog-posts .content-blog-header{
+        padding: 20px;
+        border-bottom: .5px solid #ccc;
+    }
+
+    .content-blog-posts h2{
+       color: rgb(54, 54, 54);
+       margin: 0;
+       font-size: 30px;
+    }
+
+    .content-blog-posts .header-description{
+        color: gray;
+        margin-top: 10px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        display: inline-block;
+        line-height: 1.3rem;
+    }
+
+    .content-blog-posts p{
+        color: gray;
+        font-style: italic;
+    }
+
     .blog-posts{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        margin-top: 16px;
     }
 
     .blog-posts .tags-date{
@@ -68,6 +102,7 @@ const posts = (await getCollection('posts')).sort(
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 40px;
     }
 
     .blog-posts article .content-img{
