feat: Se elimino el post de POO y se agrego un contador de visitas al blog

--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -41,7 +41,8 @@ const posts = (await getCollection('posts')).sort(
 
     .content-blog-posts .content-blog-header{
         padding: 20px;
-        border-bottom: .5px solid #ccc;
+        border-radius: 10px;
+        background: rgba(236, 245, 253, 0.4); /* fondo semi-transparente */
     }
 
     .content-blog-posts h2{
