--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,7 +12,10 @@
     </div>
     <div class="theme-lang">
         <!--<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 256 256"><path fill="#000000" d="m247.15 212.42l-56-112a8 8 0 0 0-14.31 0l-21.71 43.43A88 88 0 0 1 108 126.93A103.65 103.65 0 0 0 135.69 64H160a8 8 0 0 0 0-16h-56V32a8 8 0 0 0-16 0v16H32a8 8 0 0 0 0 16h87.63A87.76 87.76 0 0 1 96 116.35a87.7 87.7 0 0 1-19-31a8 8 0 1 0-15.08 5.34A103.6 103.6 0 0 0 84 127a87.55 87.55 0 0 1-52 17a8 8 0 0 0 0 16a103.46 103.46 0 0 0 64-22.08a104.2 104.2 0 0 0 51.44 21.31l-26.6 53.19a8 8 0 0 0 14.31 7.16L148.94 192h70.11l13.79 27.58A8 8 0 0 0 240 224a8 8 0 0 0 7.15-11.58M156.94 176L184 121.89L211.05 176Z"/></svg>-->
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>0</span>
+      <a href="/about">
+         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="#333333" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zM4 15.182V9h1.09v.693C5.572 9.328 6.232 9 7.092 9c.397 0 .863.115 1.246.357c.14.088.276.2.394.333A3.2 3.2 0 0 1 10.727 9c.397 0 .864.115 1.247.357c.39.247.753.671.753 1.28v4.545h-1.09v-4.546c0-.119-.061-.24-.246-.357a1.3 1.3 0 0 0-.664-.188c-.746 0-1.256.357-1.636.731v4.36H8v-4.546c0-.119-.06-.24-.245-.357a1.3 1.3 0 0 0-.664-.188c-.98 0-1.514.59-1.93 1.049l-.07.077v3.965zm10.984-2.546H20v-.545a3.09 3.09 0 1 0-.665 1.916l-.856-.677a2 2 0 0 1-3.495-.694m1.925-2.545a2 2 0 0 0-1.925 1.455h3.85a2 2 0 0 0-1.925-1.455" clip-rule="evenodd"/></svg>
+      </a>
+       <div class="views"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>0</span></div>
     </div>
 </nav>
 
@@ -143,8 +146,6 @@ nav .center-nav .search-bar .showResults {
   z-index: 999;
 }
 
-
-
 nav .search-bar input::placeholder {
   color: black;
 }
@@ -158,6 +159,21 @@ nav .theme-lang {
 
 nav .theme-lang svg {
   cursor: pointer;
+}
+
+nav .theme-lang .views {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 1.5rem;
+  color: #666666;
+  border-left: .5px solid #666666;
+  padding-left: .5rem;
+}
+
+nav .theme-lang a {
+  display: flex;
+  align-items: center;
 }
 
 </style>
