--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,3 +1,6 @@
+---
+let views = 0;
+---
 
 <nav>
 	<div class="logo">
@@ -15,11 +18,29 @@
       <a href="/about">
          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="#333333" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zM4 15.182V9h1.09v.693C5.572 9.328 6.232 9 7.092 9c.397 0 .863.115 1.246.357c.14.088.276.2.394.333A3.2 3.2 0 0 1 10.727 9c.397 0 .864.115 1.247.357c.39.247.753.671.753 1.28v4.545h-1.09v-4.546c0-.119-.061-.24-.246-.357a1.3 1.3 0 0 0-.664-.188c-.746 0-1.256.357-1.636.731v4.36H8v-4.546c0-.119-.06-.24-.245-.357a1.3 1.3 0 0 0-.664-.188c-.98 0-1.514.59-1.93 1.049l-.07.077v3.965zm10.984-2.546H20v-.545a3.09 3.09 0 1 0-.665 1.916l-.856-.677a2 2 0 0 1-3.495-.694m1.925-2.545a2 2 0 0 0-1.925 1.455h3.85a2 2 0 0 0-1.925-1.455" clip-rule="evenodd"/></svg>
       </a>
-       <div class="views"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>0</span></div>
+       <div class="views"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>{views}</span></div>
     </div>
 </nav>
 
 <script>
+
+  async function fetchViews() {
+    try {
+      const response = await fetch('http://localhost:8000/visit');
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+      const data = await response.json();
+      let views = data.visits || 0; // Asegúrate de que 'views' esté definido
+      console.log(views)
+      document.querySelector('.views span').textContent = views;
+    } catch (error) {
+      console.error('Error fetching views:', error);
+    }
+  }
+
+  fetchViews();
+
   async function setupSearch() {
     
     const input = document.querySelector(".search-bar-input");
@@ -53,7 +74,6 @@
     
     });
   }
-
   setupSearch();
 </script>
 
