--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -19,7 +19,7 @@
     </div>
     <div class="top-articles">
         <span>Articulos recomendados.</span>
-        <a href="">Conoce los algoritmos en programación.</a>
+        <a href="/posts/busqueda-binaria">Conoce los algoritmos en programación.</a>
         <a href="">Mi primera publicacion.</a>
         <a href="">Que es la busqueda binaria.</a>
     </div>
