--- a/src/components/BlogPosts.astro
+++ b/src/components/BlogPosts.astro
@@ -42,7 +42,8 @@ const posts = (await getCollection('posts')).sort(
     .content-blog-posts .content-blog-header{
         padding: 20px;
         border-radius: 10px;
-        background: rgba(236, 245, 253, 0.4); /* fondo semi-transparente */
+        background: rgba(236, 245, 253, 0.4); 
+        width: 100%;
     }
 
     .content-blog-posts h2{
