--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -15,11 +15,19 @@ let views = 0;
     </div>
     <div class="theme-lang">
         <!--<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 256 256"><path fill="#000000" d="m247.15 212.42l-56-112a8 8 0 0 0-14.31 0l-21.71 43.43A88 88 0 0 1 108 126.93A103.65 103.65 0 0 0 135.69 64H160a8 8 0 0 0 0-16h-56V32a8 8 0 0 0-16 0v16H32a8 8 0 0 0 0 16h87.63A87.76 87.76 0 0 1 96 116.35a87.7 87.7 0 0 1-19-31a8 8 0 1 0-15.08 5.34A103.6 103.6 0 0 0 84 127a87.55 87.55 0 0 1-52 17a8 8 0 0 0 0 16a103.46 103.46 0 0 0 64-22.08a104.2 104.2 0 0 0 51.44 21.31l-26.6 53.19a8 8 0 0 0 14.31 7.16L148.94 192h70.11l13.79 27.58A8 8 0 0 0 240 224a8 8 0 0 0 7.15-11.58M156.94 176L184 121.89L211.05 176Z"/></svg>-->
-      <a href="/about">
-         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="#333333" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zM4 15.182V9h1.09v.693C5.572 9.328 6.232 9 7.092 9c.397 0 .863.115 1.246.357c.14.088.276.2.394.333A3.2 3.2 0 0 1 10.727 9c.397 0 .864.115 1.247.357c.39.247.753.671.753 1.28v4.545h-1.09v-4.546c0-.119-.061-.24-.246-.357a1.3 1.3 0 0 0-.664-.188c-.746 0-1.256.357-1.636.731v4.36H8v-4.546c0-.119-.06-.24-.245-.357a1.3 1.3 0 0 0-.664-.188c-.98 0-1.514.59-1.93 1.049l-.07.077v3.965zm10.984-2.546H20v-.545a3.09 3.09 0 1 0-.665 1.916l-.856-.677a2 2 0 0 1-3.495-.694m1.925-2.545a2 2 0 0 0-1.925 1.455h3.85a2 2 0 0 0-1.925-1.455" clip-rule="evenodd"/></svg>
-      </a>
-       <div class="views"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>{views}</span></div>
-    </div>
+        <div class="social-media">
+          <a href="https://www.linkedin.com/in/stevenlayna" target="_blank" rel="noopener">
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill="#0284c7" d="M20.47 2H3.53a1.45 1.45 0 0 0-1.47 1.43v17.14A1.45 1.45 0 0 0 3.53 22h16.94a1.45 1.45 0 0 0 1.47-1.43V3.43A1.45 1.45 0 0 0 20.47 2M8.09 18.74h-3v-9h3ZM6.59 8.48a1.56 1.56 0 1 1 0-3.12a1.57 1.57 0 1 1 0 3.12m12.32 10.26h-3v-4.83c0-1.21-.43-2-1.52-2A1.65 1.65 0 0 0 12.85 13a2 2 0 0 0-.1.73v5h-3v-9h3V11a3 3 0 0 1 2.71-1.5c2 0 3.45 1.29 3.45 4.06Z"/></svg>
+          </a>
+          <a href="https://github.com/Steven96lg" target="_blank" rel="noopener">
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill="#000000" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></svg>
+          </a>
+        </div>
+            <a href="/about">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="#333333" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zM4 15.182V9h1.09v.693C5.572 9.328 6.232 9 7.092 9c.397 0 .863.115 1.246.357c.14.088.276.2.394.333A3.2 3.2 0 0 1 10.727 9c.397 0 .864.115 1.247.357c.39.247.753.671.753 1.28v4.545h-1.09v-4.546c0-.119-.061-.24-.246-.357a1.3 1.3 0 0 0-.664-.188c-.746 0-1.256.357-1.636.731v4.36H8v-4.546c0-.119-.06-.24-.245-.357a1.3 1.3 0 0 0-.664-.188c-.98 0-1.514.59-1.93 1.049l-.07.077v3.965zm10.984-2.546H20v-.545a3.09 3.09 0 1 0-.665 1.916l-.856-.677a2 2 0 0 1-3.495-.694m1.925-2.545a2 2 0 0 0-1.925 1.455h3.85a2 2 0 0 0-1.925-1.455" clip-rule="evenodd"/></svg>
+            </a>
+          <div class="views"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>{views}</span></div>
+      </div>
 </nav>
 
 <script>
@@ -195,5 +203,14 @@ nav .theme-lang a {
   display: flex;
   align-items: center;
 }
+
+nav .theme-lang  .social-media {
+        display: flex;
+        gap: .6rem;
+        align-items: center;
+        & a{
+            text-decoration: none;
+        }
+    }
 
 </style>
