--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,45 @@
 	</body>
 </html>
 
+<script>
+	const visited = JSON.parse(localStorage.getItem('visited') || '{}');
+	const pathname = window.location.pathname;
+	const today = new Date().toISOString().split('T')[0];
+
+	if(!visited[pathname] || visited[pathname] !== today) {
+		try {
+			const response = await fetch('http://localhost:8000/visit', {
+				method: 'POST',
+				headers: { 'Content-Type': 'application/json' },
+				body: JSON.stringify({ visits: pathname })
+			});
+			if (!response.ok) {
+				throw new Error('Network response was not ok');
+			}
+			const data = await response.json();
+			alert(data.message);
+		} catch (error) {
+			console.error('Error fetching views:', error);
+		}
+	}
+
+	try{
+		const response = await fetch('http://localhost:8000/get-visits');
+		if (!response.ok) {
+			throw new Error('Network response was not ok');
+		}
+		const data = await response.json();
+		document.querySelector('.views span').textContent = data.visits['/']
+		if(pathname !== '/'){
+			document.querySelector('.views-only-post span').textContent = data.visits[pathname] || 0;
+		}
+	}catch (error) {
+		console.error('Error fetching views:', error);
+	}
+	 visited[pathname] = today;
+ 	 localStorage.setItem("visited", JSON.stringify(visited));
+</script>
+
 <style>
 	html,
 	body {
