--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection, getEntry } from 'astro:content';
+import { Image } from 'astro:assets';
 import Layout from '../../layouts/Layout.astro';
 import Navigation from '../../components/Navigation.astro';
 
@@ -25,14 +26,15 @@ let postViews = 0;
     <header>
       <h1>{entry.data.title}</h1>
       
-      <!-- La imagen se maneja automáticamente -->
-      <!--<Image 
-        src={entry.data.image} 
-        alt={entry.data.title}
-        width={800}
-        height={400}
-        class="cover-image"
-      />-->
+      {entry.data.image && (
+        <Image 
+          src={entry.data.image} 
+          alt={entry.data.title}
+          width={800}
+          height={400}
+          class="cover-image"
+        />
+      )}
       <div class="meta">
         <span class="date-post">{new Date(entry.data.pubDate).toLocaleDateString('es-MX', { year: 'numeric', month: 'short', day: 'numeric' })}</span>
         <span class="tag">{entry.data.tag}</span>
