--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,4 +24,10 @@ import Navigation from '../components/Navigation.astro';
 		padding-bottom: 50px;
 		font-family: "Archivo Narrow", sans-serif;
 	}
+	@media (max-width: 480px){
+		main{
+			width: 370px;
+			padding: 10px;
+		}
+	}
 </style>
