--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -75,4 +75,9 @@ import Navigation from '../components/Navigation.astro';
             }
         }
     }
+    @media (max-width: 480px){
+        main{
+            width: 90%;
+        }
+    }
 </style>
