--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import Footer from '../components/Footer.astro';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/svg+xml" href="/logo.png" />
+		<link rel="icon" type="image/png" href="/blog/logo.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>SLBlog</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
